src/patternfly/components/Tabs/tabs.scss
/* ... */
// Expandable toggle
.pf-c-tabs__toggle {
  display: var(--pf-c-tabs__toggle--Display);
  align-items: center;
  margin-bottom: var(--pf-c-tabs__toggle--MarginBottom);
  visibility: var(--pf-c-tabs__toggle--Visibility);
}

.pf-c-tabs__toggle-button {
  --pf-c-tabs__toggle-text--MarginLeft: var(--pf-c-tabs__toggle-button__toggle-text--MarginLeft);
  --pf-c-tabs__toggle-text--Color: var(--pf-c-tabs__toggle-button__toggle-text--Color);

  margin-top: var(--pf-c-tabs__toggle-button--MarginTop);
  margin-bottom: var(--pf-c-tabs__toggle-button--MarginBottom);
  margin-left: var(--pf-c-tabs__toggle-button--MarginLeft);
}

.pf-c-tabs__toggle-icon {
  display: inline-block;
  color: var(--pf-c-tabs__toggle-icon--Color);
  transition: var(--pf-c-tabs__toggle-icon--Transition);
  transform: rotate(var(--pf-c-tabs__toggle-icon--Rotate));
}

.pf-c-tabs__toggle-text {
  margin-left: var(--pf-c-tabs__toggle-text--MarginLeft);
  color: var(--pf-c-tabs__toggle-text--Color, inherit);
}


// Tab list
.pf-c-tabs__list {
  @include pf-overflow-hide-scroll;

  position: relative;
  display: var(--pf-c-tabs__list--Display);
  max-width: 100%;
  overflow-x: auto;
  scroll-behavior: smooth;
  scroll-snap-type: var(--pf-c-tabs__list--ScrollSnapType);
  visibility: var(--pf-c-tabs__list--Visibility);
  -webkit-overflow-scrolling: touch;
}

// Tabs item
.pf-c-tabs__item {
  display: flex;
  flex: none;
  scroll-snap-align: var(--pf-c-tabs__item--ScrollSnapAlign);

  // Current
  &.pf-m-current {
    --pf-c-tabs__link--Color: var(--pf-c-tabs__item--m-current__link--Color);
    --pf-c-tabs__link--after--BorderColor: var(--pf-c-tabs__item--m-current__link--after--BorderColor);
    --pf-c-tabs__link--after--BorderWidth: var(--pf-c-tabs__item--m-current__link--after--BorderWidth);
  }
}

.pf-c-tabs::before,
.pf-c-tabs__list::before,
.pf-c-tabs__link::before,
.pf-c-tabs__link::after,
.pf-c-tabs__scroll-button::before {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  content: "";
  border-style: solid;
}

.pf-c-tabs__list::before,
.pf-c-tabs__link::before,
.pf-c-tabs__link::after,
.pf-c-tabs__scroll-button::before {
  top: 0;
}

.pf-c-tabs__link,
.pf-c-tabs__scroll-button,
.pf-c-tabs__list::before {
  border: 0;
}

// Tab link
.pf-c-tabs__link {
  --pf-c-tabs__link--after--BorderBottomWidth: var(--pf-c-tabs__link--after--BorderWidth); // Set default border target

  position: relative;
  display: flex;
  flex: 1;
  padding: var(--pf-c-tabs__link--PaddingTop) var(--pf-c-tabs__link--PaddingRight) var(--pf-c-tabs__link--PaddingBottom) var(--pf-c-tabs__link--PaddingLeft);
  font-size: var(--pf-c-tabs__link--FontSize);
  color: var(--pf-c-tabs__link--Color);
  text-decoration: none;
  background-color: var(--pf-c-tabs__link--BackgroundColor);
  outline-offset: var(--pf-c-tabs__link--OutlineOffset);

  &::before {
    pointer-events: none;
    border-color: var(--pf-c-tabs__link--before--border-color--base);
    border-width: var(--pf-c-tabs__link--before--BorderTopWidth) var(--pf-c-tabs__link--before--BorderRightWidth) var(--pf-c-tabs__link--before--BorderBottomWidth) var(--pf-c-tabs__link--before--BorderLeftWidth);
    border-right-color: var(--pf-c-tabs__link--before--BorderRightColor);
    border-bottom-color: var(--pf-c-tabs__link--before--BorderBottomColor);
  }

  &::after {
    top: var(--pf-c-tabs__link--after--Top);
    right: var(--pf-c-tabs__link--after--Right);
    bottom: var(--pf-c-tabs__link--after--Bottom);
    left: var(--pf-c-tabs__link--before--Left); // use the ::before Left value to offset the top border / overlap left border
    border-color: var(--pf-c-tabs__link--after--BorderColor);
    border-width: var(--pf-c-tabs__link--after--BorderTopWidth) var(--pf-c-tabs__link--after--BorderRightWidth) var(--pf-c-tabs__link--after--BorderBottomWidth) var(--pf-c-tabs__link--after--BorderLeftWidth);
  }

  // Tab item hover state
  &:hover {
    --pf-c-tabs__link--after--BorderWidth: var(--pf-c-tabs__link--hover--after--BorderWidth);
  }

  &:focus {
    --pf-c-tabs__link--after--BorderWidth: var(--pf-c-tabs__link--focus--after--BorderWidth);
  }

  &:active {
    --pf-c-tabs__link--after--BorderWidth: var(--pf-c-tabs__link--active--after--BorderWidth);
  }

  &:disabled,
  &.pf-m-disabled {
    pointer-events: none;
  }

  &:disabled,
  &.pf-m-disabled,
  &.pf-m-aria-disabled {
    --pf-c-tabs__link--BackgroundColor: var(--pf-c-tabs__link--disabled--BackgroundColor);
    --pf-c-tabs__link--before--BorderRightWidth: var(--pf-c-tabs__link--disabled--before--BorderRightWidth);
    --pf-c-tabs__link--before--BorderBottomWidth: var(--pf-c-tabs__link--disabled--before--BorderBottomWidth);
    --pf-c-tabs__link--before--BorderLeftWidth: var(--pf-c-tabs__link--disabled--before--BorderLeftWidth);
    --pf-c-tabs__link--after--BorderWidth: 0;
  }

  &.pf-m-aria-disabled {
    cursor: default;
  }

  .pf-c-tabs__item-icon,
  .pf-c-tabs__item-text {
    margin-right: var(--pf-c-tabs__link--child--MarginRight);

    &:last-child {
      --pf-c-tabs__link--child--MarginRight: 0;
    }
  }
}
/* ... */

